--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "express-session": "^1.15.1",
+    "formidable": "^1.1.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
